--- a/Normal_J6/src/main/resources/templates/TaiKhoan/DangNhap.html
+++ b/Normal_J6/src/main/resources/templates/TaiKhoan/DangNhap.html
@@ -1,100 +1,68 @@
-<!DOCTYPE html>
+<!--Author: W3layouts
+Author URL: http://w3layouts.com
+License: Creative Commons Attribution 3.0 Unported
+License URL: http://creativecommons.org/licenses/by/3.0/
+-->
+<!DOCTYPE HTML>
 <html>
 <head>
-<meta charset="UTF-8">
-<title>Đăng Nhập</title>
-<style>
-body{
-    background-image: url(../img/nen.jpg);
-  
-}
-.dangnhap{
-  background-color: rgb(127, 152, 221);
-  opacity: 0.9;
-    border-radius: 20px;
-    position: relative;
-    width: 400px;
-    height: 320px;
-    border: 1px solid white;
-    left: 35%;
-    top: 170px;
-    color: black;
-}
-.dangnhaptrong{
-    position: absolute;
-    top:100px;
-    left :80px;
-}
-.nhap{
-    width: 250px;
-    height: 25px;
-    outline: none;
-}
-.dn{
-    
-    background: orangered;
-    border: none;
-    border-radius: 10px;
-    width: 250px;
-    height: 25px;
-    box-shadow: inset 0 0 20px white;
-}
-.dn:focus{
-    box-shadow: inset 0 0 5px blue;
-    outline: none;
-}
-.quen{
-    position: absolute;
-    left: 90px;
-    bottom: 7%;
-    text-decoration: none;
-}
-.trangchu{
-    position: absolute;
-    left: 1%;
-    bottom: 0px;
-    text-decoration: none;
-}
-.trangchu:hover{
-    color: red    ;
-}
-.quen:hover{
-    color: red    ;
-}
-.dk{
-    position: absolute;
-    right: 70px;
-    bottom: 7%;
-    text-decoration: none;
-}
-.dk:hover{
-    color: red;
-}
-
-</style>
+<title>Classy Login form Widget Flat Responsive Widget Template :: w3layouts</title>
+<script src="js/jquery.min.js"></script>
+<!-- Custom Theme files -->
+<link href="css/styleLogin.css" rel="stylesheet" type="text/css" media="all"/>
+<!-- for-mobile-apps -->
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" /> 
+<meta name="keywords" content="Classy Login form Responsive, Login form web template, Sign up Web Templates, Flat Web Templates, Login signup Responsive web template, Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design" />
+<!-- //for-mobile-apps -->
+<!--Google Fonts-->
+<!-- <link href='//fonts.googleapis.com/css?family=Roboto+Condensed:400,700' rel='stylesheet' type='text/css'> -->
 </head>
 <body>
-<form action="/dangnhap" class="dangnhap" method="POST">
-    
-        <h1 style="text-align: center;">ĐĂNG NHẬP</h1>'
-     
-
-    
-        <div class="dangnhaptrong">
-       	<input class="nhap" name="username" placeholder="Username?" required="required" ><br><br>
-     <input class="nhap" name="password" type="password" placeholder="Password?" required="required" ><br><br>
- 
- 
-       <button type="submit" class="dn"><b>Đăng Nhập</b></button>
- 
-    </div>
-
-    
-    
-    <a class="quen" href="quenmk"><h4>Quên Mật Khẩu</h4></a>
-    <a class="dk" href="dangky"><h4>Đăng Ký</h4></a>
-    <br>
-    <a class="trangchu" href="trangchu"><h4><< Trang chủ</h4></a>
-    </form>
+<!--header start here-->
+<div class="header">
+		<div class="header-main">
+		       <h1>Classy Login Form</h1>
+			<div class="header-bottom">
+				<div class="header-right w3agile">
+					
+					<div class="header-left-bottom agileinfo">
+						
+					 <form action="#" method="post">
+						<input type="text"  value="User name" name="name" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'User name';}"/>
+					<input type="password"  value="Password" name="password" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'password';}"/>
+						<div class="remember">
+			             <span class="checkbox1">
+							   <label class="checkbox"><input type="checkbox" name="" checked=""><i> </i>Remember me</label>
+						 </span>
+						 <div class="forgot">
+						 	<h6><a href="#">Forgot Password?</a></h6>
+						 </div>
+						<div class="clear"> </div>
+					  </div>
+					   
+						<input type="submit" value="Login">
+					</form>	
+					<div class="header-left-top">
+						<div class="sign-up"> <h2>or</h2> </div>
+					
+					</div>
+					<div class="header-social wthree">
+							<a href="#" class="face"><h5>Facebook</h5></a>
+							<a href="#" class="twitt"><h5>Twitter</h5></a>
+						</div>
+						
+				</div>
+				</div>
+			  
+			</div>
+		</div>
+</div>
+<!--header end here-->
+<div class="copyright">
+	<p>© 2016 Classy Login Form. All rights reserved | Design by  <a href="http://w3layouts.com/" target="_blank">  W3layouts </a></p>
+</div>
+<!--footer end here-->
 </body>
 </html>
