--- a/Normal_J6/src/main/resources/templates/admin/dashboard.html
+++ b/Normal_J6/src/main/resources/templates/admin/dashboard.html
@@ -38,13 +38,18 @@
 
   <!-- Google Font -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic">
+  <base href="/admin/">
 </head>
 <body class="hold-transition skin-blue sidebar-mini" ng-app="myApp">
 
 <header ng-include="navbar" ng-controller="header-footer" >
 </header>
 <aside ng-include="aside"  ng-controller="header-footer"></aside>
+
+ <main ui-view></main>
 <footer ng-include="footer"  ng-controller="header-footer" ></footer>
+
+
 <!-- jQuery 3 -->
 <script src="../adminAsset/bower_components/jquery/dist/jquery.min.js"></script>
 <!-- jQuery UI 1.11.4 -->
@@ -88,6 +93,6 @@
     
  <script src="../adminAsset/app-module.js"></script>
   <script src="../adminAsset/app.js"></script>
-  
+   <script src="../adminAsset/app-route-config.js"></script>
 </body>
 </html>
