--- a/Normal_J6/src/main/resources/static/adminAsset/components/aside.html
+++ b/Normal_J6/src/main/resources/static/adminAsset/components/aside.html
@@ -15,8 +15,8 @@
       <!-- sidebar menu: : style can be found in sidebar.less -->
       <ul class="sidebar-menu tree" data-widget="tree">
         <li class="header">MAIN NAVIGATION</li>
-        <li><a href="Ê"><i class="fa fa-book"></i> <span>Accounts</span></a></li>
-        <li><a href="Ê"><i class="fa fa-book"></i> <span>Product</span></a></li>
+        <li><a href="/admin/accounts"><i class="fa fa-book"></i> <span>Accounts</span></a></li>
+        <li><a href="/admin/products"><i class="fa fa-book"></i> <span>Product</span></a></li>
       </ul>
     </section>
     <!-- /.sidebar -->
