--- a/Normal_J6/src/main/resources/templates/TaiKhoan/login.html
+++ b/Normal_J6/src/main/resources/templates/TaiKhoan/login.html
@@ -1,10 +1,5 @@
-<!--Author: W3layouts
-Author URL: http://w3layouts.com
-License: Creative Commons Attribution 3.0 Unported
-License URL: http://creativecommons.org/licenses/by/3.0/
--->
 <!DOCTYPE HTML>
-<html>
+<html xmlns= "http://www.thymeleaf.org">
 <head>
 <title>Classy Login form Widget Flat Responsive Widget Template :: w3layouts</title>
 <script src="js/jquery.min.js"></script>
@@ -24,13 +19,14 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <div class="header">
 		<div class="header-main">
 		       <h1>Classy Login Form</h1>
+		       <h5 th:text="${tb}"></h5>
 			<div class="header-bottom">
 				<div class="header-right w3agile">
 					
 					<div class="header-left-bottom agileinfo">
 						
-					 <form action="#" method="post">
-						<input type="text"  value="User name" name="name" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'User name';}"/>
+					 <form th:action="@{/security/login}" method="post">
+						<input type="text"  value="User name" name="username" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'User name';}"/>
 					<input type="password"  value="Password" name="password" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'password';}"/>
 						<div class="remember">
 			             <span class="checkbox1">
