--- a/Normal_J6/src/main/resources/templates/layout/layout.html
+++ b/Normal_J6/src/main/resources/templates/layout/layout.html
@@ -58,21 +58,23 @@
                                 <ul class="ht-dropdown">
                                 
                                   <th:block th:if="${#request.remoteUser}">
+                                       <li><a href="../doimk" th:text="#{lo.mn.changepass}" ></a></li>
+                                        <li><a href="../capnhattk" th:text="#{lo.mn.updateacc}"  ></a></li>
+                                           <li><a href="../lichsu/${sessionScope.user.username}"  th:text="#{lo.mn.history}"></a></li>
                                       <li><a th:href="@{/security/logout}" th:text="#{lo.mn.logout}"></a></li>
                                       
                                       <li th:if="${#request.isUserInRole('ADMIN')">
                                       	   <a th:href="@{admin}">Administration</a>
                                       </li>
-                                  <th:block>
+                                  </th:block>
                                   <th:block th:unless="${#request.remoteUser}">
                                   		 <li><a href="../dangnhap" th:text="#{lo.mn.login}" ></a></li>
                                     <li><a href="../dangky" th:text="#{lo.mn.register}"></a></li>
                                     <li><a href="../quenmk" th:text="#{lo.mn.forgot}"></a></li>
-                                    <li><a href="../doimk" th:text="#{lo.mn.changepass}" ></a></li>
-                                    <li><a href="../capnhattk" th:text="#{lo.mn.updateacc}"  ></a></li>
+                    
                                     <hr>
                                   
-                                      <li><a href="../lichsu/${sessionScope.user.username}"  th:text="#{lo.mn.history}"></a></li>
+                       
                                     <hr>
                                   </th:block>
  
@@ -115,6 +117,19 @@
                                     </li>
                                    
                                     </li>
+                                    
+                                    
+                                       <li><a href="../dangnhap"><i class="lnr lnr-user"></i><span class="my-cart"><span>
+                                         <div th:if="${#request.remoteUser}">
+                                         <strong th:text="#{lo.mn.login}">[[${#request.remoteUser}]]</strong>
+                                            </div>
+                                    </span></a>
+
+
+
+                                    </li>
+                                    
+                                    
                                     <div th:if="${#request.remoteUser}">
                                     <li><a href="../dangnhap"><i class="lnr lnr-user"></i><span class="my-cart"><span>  
 						              <strong th:text="#{lo.mn.login}">[[${#request.remoteUser}]]</strong>
