--- a/Normal_J6/src/main/resources/templates/layout/layout.html
+++ b/Normal_J6/src/main/resources/templates/layout/layout.html
@@ -115,8 +115,8 @@
                                     </li>
                                    
                                     </li>
-                                    <div th:if="${#request.remoteUser}">
-                                    <li><a href="../dangnhap"><i class="lnr lnr-user"></i><span class="my-cart"><span>  
+                                    <div>
+                                    <li><a href="/login"><i class="lnr lnr-user"></i><span class="my-cart"><span>  
 						              <strong th:text="#{lo.mn.login}">[[${#request.remoteUser}]]</strong>
                                     </span></a>
                                     </li>
