sửa trong layout

--- a/Normal_J6/src/main/resources/templates/layout/layout.html
+++ b/Normal_J6/src/main/resources/templates/layout/layout.html
@@ -61,7 +61,7 @@
                                       <li><a th:href="@{/security/logout}" th:text="#{lo.mn.logout}"></a></li>
                                       
                                       <li th:if="${#request.isUserInRole('ADMIN')}">
-                                      	   <a th:href="@{admin}">Administration</a>
+                                      	   <a th:href="@{admin}">Administrationn</a>
                                       </li>
                                   <th:block>
                                   <th:block th:unless="${#request.remoteUser}">
