login bằng face và gg

--- a/Normal_J6/src/main/resources/templates/NguoiDung/trangchu.html
+++ b/Normal_J6/src/main/resources/templates/NguoiDung/trangchu.html
@@ -27,8 +27,8 @@
                         <div class="slider-wrapper theme-default">
                             <!-- Slider Background  Image Start-->
                             <div id="slider" class="nivoSlider">
-                                <a href="shop"><img src="img\slider\1.1.jpg" data-thumb="img/slider/1.1.jpg" alt="" title="#htmlcaption"></a>
-                                <a href="shop"><img src="img\slider\1.2.jpg" data-thumb="img/slider/1.2.jpg" alt="" title="#htmlcaption2"></a>
+                                <a href="shop"><img src="\img\slider\1.1.jpg" data-thumb="img/slider/1.1.jpg" alt="" title="#htmlcaption"></a>
+                                <a href="shop"><img src="\img\slider\1.2.jpg" data-thumb="img/slider/1.2.jpg" alt="" title="#htmlcaption2"></a>
                             </div>
                             <!-- Slider Background  Image Start-->
                         </div>
