--- a/Normal_J6/src/main/resources/templates/layout/layout.html
+++ b/Normal_J6/src/main/resources/templates/layout/layout.html
@@ -7,21 +7,21 @@
 
 
  <link rel="shortcut icon" href="img\1.png">
-    <link rel="stylesheet" href="..\css\font-awesome.min.css">
-    <link rel="stylesheet" href="..\css\ionicons.min.css">
-    <link rel="stylesheet" href="..\css\linearicons.css">
-    <link rel="stylesheet" href="..\css\nice-select.css">
-    <link rel="stylesheet" href="..\css\jquery.fancybox.css">
-    <link rel="stylesheet" href="..\css\jquery-ui.min.css">
-    <link rel="stylesheet" href="..\css\meanmenu.min.css">
-    <link rel="stylesheet" href="..\css\nivo-slider.css">
-    <link rel="stylesheet" href="..\css\owl.carousel.min.css">
-    <link rel="stylesheet" href="..\css\bootstrap.min.css">
-    <link rel="stylesheet" href="..\css\default.css">
-    <link rel="stylesheet" href="..\css\style.css">
-    <link rel="stylesheet" href="..\css\responsive.css">
+    <link rel="stylesheet" href="\..\css\font-awesome.min.css">
+    <link rel="stylesheet" href="\..\css\ionicons.min.css">
+    <link rel="stylesheet" href="\..\css\linearicons.css">
+    <link rel="stylesheet" href="\..\css\nice-select.css">
+    <link rel="stylesheet" href="\..\css\jquery.fancybox.css">
+    <link rel="stylesheet" href="\..\css\jquery-ui.min.css">
+    <link rel="stylesheet" href="\..\css\meanmenu.min.css">
+    <link rel="stylesheet" href="\..\css\nivo-slider.css">
+    <link rel="stylesheet" href="\..\css\owl.carousel.min.css">
+    <link rel="stylesheet" href="\..\css\bootstrap.min.css">
+    <link rel="stylesheet" href="\..\css\default.css">
+    <link rel="stylesheet" href="\..\css\style.css">
+    <link rel="stylesheet" href="\..\css\responsive.css">
 
-    <script src="..\js\vendor\modernizr-3.5.0.min.js"></script>
+    <script src="\..\js\vendor\modernizr-3.5.0.min.js"></script>
 </head>
 <body>
     <!--[if lte IE 9]>
@@ -57,14 +57,14 @@
                                 <!-- Dropdown Start -->
                                 <ul class="ht-dropdown">
                                 
-                                  <th:block th:if="${#request.remoteUser}">
+                                  <div th:if="${#request.remoteUser}">
                                       <li><a th:href="@{/security/logout}" th:text="#{lo.mn.logout}"></a></li>
                                       
                                       <li th:if="${#request.isUserInRole('ADMIN')}">
                                       	   <a th:href="@{admin}">Administration</a>
                                       </li>
-                                  <th:block>
-                                  <th:block th:unless="${#request.remoteUser}">
+                                  </div>
+                                  <div th:unless="${#request.remoteUser}">
                                   		 <li><a href="../dangnhap" th:text="#{lo.mn.login}" ></a></li>
                                     <li><a href="../dangky" th:text="#{lo.mn.register}"></a></li>
                                     <li><a href="../quenmk" th:text="#{lo.mn.forgot}"></a></li>
@@ -74,7 +74,7 @@
                                   
                                       <li><a href="../lichsu/${sessionScope.user.username}"  th:text="#{lo.mn.history}"></a></li>
                                     <hr>
-                                  </th:block>
+                                  </div>
  
                                 </ul>
                                 <!-- Dropdown End -->
@@ -92,7 +92,7 @@
                     <div class="row align-items-center no-gutters">
                         <div class="col-lg-3 col-md-12">
                             <div class="logo mb-all-30">
-                                <a href="../trangchu"><img src="..\img\logo\1.png" alt="logo-image"></a>
+                                <a href="../trangchu"><img src="\..\img\logo\1.png" alt="logo-image"></a>
                             </div>
                         </div>
                         <!-- Categorie Search Box Start Here -->
@@ -115,9 +115,14 @@
                                     </li>
                                    
                                     </li>
-                                    <div>
-                                    <li><a href="/login"><i class="lnr lnr-user"></i><span class="my-cart"><span>  
-						              <strong th:text="#{lo.mn.login}">[[${#request.remoteUser}]]</strong>
+                                    <div th:if="${#request.remoteUser}">
+                                   
+                                    [[${#request.remoteUser}]]
+                                    </div>
+                                    <div th:unless="${#request.remoteUser}">
+                                         <li><a href="/login"><i class="lnr lnr-user"></i><span class="my-cart"><span>  
+						              <strong th:text="#{lo.mn.login}"></strong>
+						              
                                     </span></a>
                                     </li>
                                     </div>
@@ -175,7 +180,7 @@
                             <nav>
                                 <ul class="vertical-menu-list">
                                    <c:forEach var="HoLy" items="${item}">
-                                    <li class=""><a href="../shop/${HoLy.id}">${HoLy.name}</a>
+                                    <li class=""><a href="\../shop/${HoLy.id}">${HoLy.name}</a>
 
                               
                          
