--- a/Normal_J6/src/main/resources/templates/TaiKhoan/login.html
+++ b/Normal_J6/src/main/resources/templates/TaiKhoan/login.html
@@ -45,8 +45,9 @@
 					
 					</div>
 					<div class="header-social wthree">
-							<a href="#" class="face"><h5>Facebook</h5></a>
-							<a href="#" class="twitt"><h5>Twitter</h5></a>
+					        <a href="/oauth2/authorization/google" class="twitt"><h5>Twitter</h5></a>
+							<a href="/oauth2/authorization/facebook" class="face"><h5>Facebook</h5></a>
+							
 						</div>
 						
 				</div>
