update chia trang của bảng category

--- a/Normal_J6/src/main/resources/templates/admin/dashboard.html
+++ b/Normal_J6/src/main/resources/templates/admin/dashboard.html
@@ -93,8 +93,8 @@
  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/1.0.30/angular-ui-router.js" integrity="sha512-5J08Lq3B2EfuPrNSYckUPHKYHaUhCQ4MdeObdcR0YZnr8eapZ7XMA2ejUyQYpWN+fwO48wuxsL5KDZYIVVVxvg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.0/angular-cookies.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/ui-router-breadcrumbs@latest/ui-router-breadcrumbs.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/1.2.1/ui-bootstrap-tpls.js" integrity="sha512-sxNDTM0F1ep4sjID23wpRXqRuc7AEfTeNHDFbueP6Et2eOVJl02fpAUWUx6MvqXpAlu0XbJfWxWyN4QhtuFttw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
-  
  <script src="../adminAsset/app-module.js"></script>
  <script src="../adminAsset/app-route-config.js"></script>
   <script src="../adminAsset/service.js"></script>
