fix security cho thằng trung

--- a/Normal_J6/src/main/resources/static/adminAsset/components/categories.html
+++ b/Normal_J6/src/main/resources/static/adminAsset/components/categories.html
@@ -22,8 +22,8 @@
 						<div class="box-body">
 							<div class="form-group">
 								<label for="exampleInputEmail1">Category Name</label> <input
-									type="email" class="form-control" id="exampleInputEmail1"
-									placeholder="Enter email">
+									type="text" class="form-control" id="exampleInputEmail1"
+									placeholder="Enter name of category">
 							</div>
 						</div>
 						<!-- /.box-body -->
