--- a/Normal_J6/src/main/resources/static/css/styleLogin.css
+++ b/Normal_J6/src/main/resources/static/css/styleLogin.css
@@ -119,7 +119,7 @@ span.login-color {
   font-weight: 700;
 }
 .header-left-bottom input[type="text"] {
-    background: url(../images/m.png)no-repeat 0px 5px;
+    background: url(../img/m.png)no-repeat 0px 5px;
     outline: none;
     font-size: 15px;
     font-weight: 400;
@@ -132,7 +132,7 @@ span.login-color {
     display: inline-block;
 }
 .header-left-bottom input[type="password"]{
-   background: url(../images/l.png)no-repeat 0px 5px;
+   background: url(../img/l.png)no-repeat 0px 5px;
   outline: none;
   font-size: 15px;
   font-weight: 400;
@@ -180,7 +180,7 @@ h5 {
     padding: 0.5em;
 }
 .header-social a.face{
-  background:url(../images/fac.png)no-repeat 12px 9px #3B62A3;
+  background:url(../img/fac.png)no-repeat 12px 9px #3B62A3;
   color: #FFF;
   font-size: 16px;
   font-weight: 400;
@@ -197,7 +197,7 @@ h5 {
   font-family: 'Roboto Condensed', sans-serif;
 }
 .header-social a.face:hover{
-	 background:url(../images/fac.png)no-repeat 12px 9px #0E387C;
+	 background:url(../img/fac.png)no-repeat 12px 9px #0E387C;
 	 transition: 0.5s all;
   -webkit-transition: 0.5s all;
   -moz-transition: 0.5s all;
@@ -205,7 +205,7 @@ h5 {
 }
 /*-- agileits --*/
 .header-social a.twitt {
-  background:url(../images/twitter.png)no-repeat 12px 9px #19B0E7;
+  background:url(../img/Google.png)no-repeat 12px 9px red;
   color: #FFF;
   font-size: 16px;
   font-weight: 400;
@@ -223,7 +223,7 @@ h5 {
   font-family: 'Roboto Condensed', sans-serif;
 }
 .header-social a.twitt:hover {
-  background: url(../images/twitter.png)no-repeat 12px 9px #0192C7;
+  background: url(../img/Google.png)no-repeat 12px 9px red;
    transition: 0.5s all;
   -webkit-transition: 0.5s all;
   -moz-transition: 0.5s all;
@@ -299,7 +299,7 @@ span.sin-color {
 }
 .strip-left input.user {
 /*-- agileits --*/
- background:url(../images/user.png)no-repeat 10px 9px #FBFBFB;
+ background:url(../img/user.png)no-repeat 10px 9px #FBFBFB;
   display: block;
 }
 
@@ -316,7 +316,7 @@ span.sin-color {
 	background:#eeeeee;
 }
 .strip-left input.lock {
-   background: url(../images/lock.png)no-repeat 10px 10px #FBFBFB;
+   background: url(../img/lock.png)no-repeat 10px 10px #FBFBFB;
   display: block;
 }
 .strip-left {
@@ -382,7 +382,7 @@ span.sin-color {
   display: inline-block;
 }
 .strip-left ul.botm-strip-icon li a {
-  background: url(../images/sprite.png)no-repeat;
+  background: url(../img/sprite.png)no-repeat;
   width: 20px;
   height: 25px;
   display: block;
@@ -519,7 +519,7 @@ span.sin-color {
 }
 .checkbox input + i:after {
 	content: '';
-	background: url("../images/tick.png") no-repeat 5px 5px;
+	background: url("../img/tick.png") no-repeat 5px 5px;
 	top: -1px;
 	left: -1px;
 	width: 15px;
