--- a/Normal_J6/src/main/resources/templates/TaiKhoan/SignUp.html
+++ b/Normal_J6/src/main/resources/templates/TaiKhoan/SignUp.html
@@ -18,35 +18,29 @@
 <!--header start here-->
 <div class="header">
 		<div class="header-main">
-		       <h1>ĐĂNG NHẬP</h1>
-		       <center><h5 th:text="${tb}" style="color:red"></h5></center>
+		       <h1>ĐĂNG KÝ</h1>
+		       <h5 th:text="${tb}"></h5>
 			<div class="header-bottom">
 				<div class="header-right w3agile">
 					
 					<div class="header-left-bottom agileinfo">
 						
-					 <form action="/security/login" method="post">
-						<input type="text"   name="username" placeholder="Tên đăng nhập"/>
-					<input type="password"   name="password" placeholder="Mật khẩu"/>
+					 <form action="/" method="post">
+						<input type="text"   name="username" placeholder="Nhập Username"/>
+					   <input type="password"name="password" placeholder="Nhập Password"/>
+						<input type="password"name="password" placeholder="Nhập lại Password"/>
+						<input type="text"name="fullname" placeholder="Nhập FullName"/>
+						<input type="text"name="fullname" placeholder="Nhập Email"/>
 						<div class="remember">
 			            
-						 <div class="forgot">
-						 	<h6><a href="#">Quên mật khẩu?</a></h6>
-						 </div>
+						 
 						<div class="clear"> </div>
 					  </div>
 					   
-						<input type="submit" value="Đăng nhập">
+						<input type="submit" value="Đăng ký">
 					</form>	
-					<div class="header-left-top">
-						<div class="sign-up"> <h2>or</h2> </div>
 					
-					</div>
-					<div class="header-social wthree">
-					        <a href="/oauth2/authorization/google" class="twitt"><h5>Google</h5></a>
-							<a href="/oauth2/authorization/facebook" class="face"><h5>Facebook</h5></a>
-							
-						</div>
+					
 						
 				</div>
 				</div>
