--- a/Normal_J6/src/main/resources/static/css/css.css
+++ b/Normal_J6/src/main/resources/static/css/css.css
@@ -22,3 +22,6 @@
   font-weight: 400;
   src: local('Open Sans Regular'), local('OpenSans-Regular'), url(s/opensans/v18/mem8YaGs126MiZpBA-UFVZ0e.ttf) format('truetype');
 }
+.a{
+ color:black;
+}
