--- a/Normal_J6/src/main/resources/templates/layout/layout.html
+++ b/Normal_J6/src/main/resources/templates/layout/layout.html
@@ -6,22 +6,22 @@
 <title th:replace="${title}"></title>
 
 
- <link rel="shortcut icon" href="img\1.png">
-    <link rel="stylesheet" href="\..\css\font-awesome.min.css">
-    <link rel="stylesheet" href="\..\css\ionicons.min.css">
-    <link rel="stylesheet" href="\..\css\linearicons.css">
-    <link rel="stylesheet" href="\..\css\nice-select.css">
-    <link rel="stylesheet" href="\..\css\jquery.fancybox.css">
-    <link rel="stylesheet" href="\..\css\jquery-ui.min.css">
-    <link rel="stylesheet" href="\..\css\meanmenu.min.css">
-    <link rel="stylesheet" href="\..\css\nivo-slider.css">
-    <link rel="stylesheet" href="\..\css\owl.carousel.min.css">
-    <link rel="stylesheet" href="\..\css\bootstrap.min.css">
-    <link rel="stylesheet" href="\..\css\default.css">
-    <link rel="stylesheet" href="\..\css\style.css">
-    <link rel="stylesheet" href="\..\css\responsive.css">
+ <link rel="shortcut icon" th:href="@{/img/1.png}" >
+    <link rel="stylesheet" th:href="@{/css/font-awesome.min.css}">
+    <link rel="stylesheet" th:href="@{/css/ionicons.min.css}">
+    <link rel="stylesheet" th:href="@{/css/linearicons.css}">
+    <link rel="stylesheet" th:href="@{/css/nice-select.css}" >
+    <link rel="stylesheet" th:href="@{/css/jquery.fancybox.css}" > 
+    <link rel="stylesheet" th:href="@{/css/jquery-ui.min.css}" > 
+    <link rel="stylesheet" th:href="@{/css/meanmenu.min.css}" >
+    <link rel="stylesheet" th:href="@{/css/nivo-slider.css}" >
+    <link rel="stylesheet" th:href="@{/css/owl.carousel.min.css}" > 
+    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}" >  
+    <link rel="stylesheet" th:href="@{/css/default.css}" >
+    <link rel="stylesheet" th:href="@{/css/style.css}" > 
+    <link rel="stylesheet" th:href="@{/css/responsive.css}" >
 
-    <script src="\..\js\vendor\modernizr-3.5.0.min.js"></script>
+    <script th:src="@{\js\vendor\modernizr-3.5.0.min.js}"></script>
     
 </head>
 <body>
@@ -93,7 +93,7 @@
                     <div class="row align-items-center no-gutters">
                         <div class="col-lg-3 col-md-12">
                             <div class="logo mb-all-30">
-                                <a href="../trangchu"><img src="\..\img\logo\1.png" alt="logo-image"></a>
+                                <a th:href="@{/index}"><img th:src="@{\img\logo\1.png}" alt="logo-image"></a>
                             </div>
                         </div>
                         <!-- Categorie Search Box Start Here -->
