--- a/Normal_J6/src/main/resources/templates/NguoiDung/shop.html
+++ b/Normal_J6/src/main/resources/templates/NguoiDung/shop.html
@@ -61,15 +61,15 @@
                                     <div class="row">
                                         <!-- Single Product Start -->
                                         
-                                         <div th:each="HoLy:${page.content}">
-                                         "HoLy:${item}"
-                                        <div class="col-lg-4 col-md-4 col-sm-6 col-6">
+                                         
+                                    
+                                        <div th:each="HoLy:${page.content}" class="col-lg-4 col-md-4 col-sm-6 col-6">
                                             <div class="single-product">
                                                 <!-- Product Image Start -->
                                                 <div class="pro-img">
-                                                    <a href="chitiet?id=${HoLy.id}">
-                                                        <img class="primary-img" src="../img/products/${HoLy.image}" alt="single-product">
-                                                        <img class="secondary-img" src="../img/products/${HoLy.image}" alt="single-product">
+                                                    <a th:src="@{|/chitiet/${HoLy.id}|}">
+                                                      <img class="primary-img" th:src="@{|/img/products/${HoLy.image}|}" alt="single-product">
+                                                        <img class="secondary-img"  th:src="@{|/img/products/${HoLy.image}|}" alt="single-product">
                                                     </a>
                                                    
                                                 </div>
@@ -77,8 +77,8 @@
                                                 <!-- Product Content Start -->
                                                 <div class="pro-content">
                                                     <div class="pro-info">
-                                                        <h4><a href="chitiet?id=${HoLy.id}">${HoLy.name}</a></h4>
-                                                        <p><span class="price">${HoLy.unitPrice}₫</span></p>
+                                                        <h4><a th:src="@{|/chitiet/${HoLy.id}|}">[[${HoLy.name}]]</a></h4>
+                                                        <p><span class="price">[[${HoLy.unitPrice}]]₫</span></p>
                                                       
                                                 
                                                     </div>
@@ -93,7 +93,7 @@
                                             </div>
                                         </div>
                                     
-                                       
+                                     
                                        
                                       
                                    
@@ -131,7 +131,7 @@
                 </ul>
               </nav>                                
                                     <div class="product-pagination">
-                                        <span class="grid-item-list">Trang  ${page.number+1}/${page.totalPages}(${page.totalElements} Sản phẩm)</span>
+                                        <span class="grid-item-list">Trang  [[${page.number+1}]]/[[${page.totalPages}]]([[${page.totalElements}]] Sản phẩm)</span>
                                     </div>
                                 </div>
                                 <!-- Product Pagination Info -->
